--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+body {
+  background-color: #07468f;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -36,3 +40,23 @@
     transform: rotate(360deg);
   }
 }
+
+/*! fonts */
+
+@font-face {
+  font-family: Popping;
+  src: url(/public/fonts/Poppins/Poppins-Bold.ttf);
+  weight: 800;
+}
+
+/* @font-face {
+  font-family: Popping;
+  src: url(/public/fonts/Poppins/Poppins-Medium.ttf);
+  font-weight: 600;
+}
+
+@font-face {
+  font-family: Popping;
+  src: url(/public/fonts/Poppins/Poppins-Light.ttf);
+  font-weight: 400;
+} */
