--- a/src/App.css
+++ b/src/App.css
@@ -46,17 +46,17 @@ body {
 @font-face {
   font-family: Popping;
   src: url(/public/fonts/Poppins/Poppins-Bold.ttf);
-  weight: 800;
+  font-weight: 800;
 }
 
-/* @font-face {
+@font-face {
   font-family: Popping;
   src: url(/public/fonts/Poppins/Poppins-Medium.ttf);
   font-weight: 600;
-}
+} 
 
 @font-face {
   font-family: Popping;
   src: url(/public/fonts/Poppins/Poppins-Light.ttf);
   font-weight: 400;
-} */
+} 
